--- a/store/app/views/products/index.html.erb
+++ b/store/app/views/products/index.html.erb
@@ -1,6 +1,8 @@
 <% title "Products" %>
 
 <%= form_tag products_path, :method => 'get', :id => "products_search" do %>
+  <%= hidden_field_tag :direction, params[:direction] %>
+  <%= hidden_field_tag :sort, params[:sort] %>
   <p>
     <%= text_field_tag :search, params[:search] %>
     <%= submit_tag "Search", :name => nil %>
